syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.cinema.proto";

message Seat {
    int32 row = 1;
    int32 column = 2;
}

message SubmitReserveTicketRequest {
    repeated Seat seats = 2;
}

message ReserveTicketResponse {
    bool is_success = 1;
    string message = 2;
}

message GetAvailableSeatsResponse {
    repeated Seat seats = 1;
}

service CinemaService {
    rpc SubmitReserveTicket (SubmitReserveTicketRequest) returns (ReserveTicketResponse);
    rpc SubmitGetAvailableSeatsRequest (Empty) returns (GetAvailableSeatsResponse);
}

message Empty {
}